--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="conteiner">
         <h1><img src="assets/images/icon-star.svg" alt="">FAQs</h1>
         <div class="card">
-            <h3>What is Frontend Mentor, and how will it help me? </h3>
+            <h4>What is Frontend Mentor, and how will it help me? </h4>
             <img id="mais" class="plus" src="assets/images/icon-plus.svg" alt="">
             <p>
                 Frontend Mentor offers realistic coding challenges to help developers improve their 
@@ -21,7 +21,7 @@
             </p>
         </div>
         <hr>
-        <div class="card"><h3>Is Frontend Mentor free? </h3>
+        <div class="card"><h4>Is Frontend Mentor free? </h4>
             <img id="mais" class="plus" src="assets/images/icon-plus.svg" alt="">
             <p>
                 Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
@@ -29,7 +29,7 @@
             </p>
         </div>
         <hr>
-        <div class="card"><h3>Can I use Frontend Mentor projects in my portfolio? </h3>
+        <div class="card"><h4>Can I use Frontend Mentor projects in my portfolio? </h4>
             <img id="mais" class="plus" src="assets/images/icon-plus.svg" alt="">
             <p>
                 Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
@@ -37,7 +37,7 @@
             </p>
         </div>
         <hr>
-        <div class="card"> <h3>How can I get help if I'm stuck on a Frontend Mentor challenge? </h3>
+        <div class="card"> <h4>How can I get help if I'm stuck on a challenge? </h4>
             <img id="mais" class="plus" src="assets/images/icon-plus.svg" alt="">
             <p>
                 The best place to get help is inside Frontend Mentor's Discord community. There's a help 
