--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="media.css">
 </head>
 <body>
-    <div id="conteiner">
+    <article id="conteiner">
         <h1><img src="assets/images/icon-star.svg" alt="">FAQs</h1>
-        <div class="card">
+        <section class="card">
             <h4>What is Frontend Mentor, and how will it help me? </h4>
             <img id="mais" class="plus" src="assets/images/icon-plus.svg" alt="">
             <p>
@@ -19,32 +19,35 @@
                 frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for 
                 all levels and ideal for portfolio building.
             </p>
-        </div>
+        </section>
         <hr>
-        <div class="card"><h4>Is Frontend Mentor free? </h4>
+        <section class="card">
+            <h4>Is Frontend Mentor free? </h4>
             <img id="mais" class="plus" src="assets/images/icon-plus.svg" alt="">
             <p>
                 Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
                 option providing access to a range of projects suitable for all skill levels.
             </p>
-        </div>
+        </section>
         <hr>
-        <div class="card"><h4>Can I use Frontend Mentor projects in my portfolio? </h4>
+        <section class="card">
+            <h4>Can I use Frontend Mentor projects in my portfolio? </h4>
             <img id="mais" class="plus" src="assets/images/icon-plus.svg" alt="">
             <p>
                 Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
                 way to showcase your skills to potential employers!
             </p>
-        </div>
+        </section>
         <hr>
-        <div class="card"> <h4>How can I get help if I'm stuck on a challenge? </h4>
+        <section class="card"> 
+            <h4>How can I get help if I'm stuck on a challenge? </h4>
             <img id="mais" class="plus" src="assets/images/icon-plus.svg" alt="">
             <p>
                 The best place to get help is inside Frontend Mentor's Discord community. There's a help 
                 channel where you can ask questions and seek support from other community members.
             </p>
-        </div>
-    </div>
+        </section>
+    </article>
     <script src="script.js"></script>
 </body>
 </html>
